<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.LoginActivity">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/include_toolbar"
        app:layout_constraintBottom_toTopOf="@id/nsw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                style="@style/TextInputLayout"
                android:layout_margin="@dimen/_16sdp"
                android:hint="@string/hint_full_name"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/tilEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietFullName"
                    style="@style/TextInputEditText"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/TextInputLayout"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_email"
                app:layout_constraintBottom_toTopOf="@id/tilPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFullName"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    style="@style/TextInputEditText"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/TextInputLayout"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_password"
                app:layout_constraintBottom_toTopOf="@id/tilConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    style="@style/TextInputEditText"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/TextInputLayout"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_confirm_password"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietConfirmPassword"
                    style="@style/TextInputEditText"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPrimary"
                style="@style/btnGreen"
                android:onClick="onClickedPrimary"
                android:text='@string/btn_sign_in'
                app:layout_constraintBottom_toTopOf="@id/tvSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSecondary"
                style="@style/tvFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="onClickedSecondary"
                android:padding="@dimen/_8sdp"
                android:text="@string/btn_sign_up"
                app:layout_constraintBottom_toTopOf="@id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPrimary" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/tvMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSecondary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                style="@style/tvFooter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/load_sign_in"
                android:textSize="@dimen/_8ssp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/pbLoader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                app:layout_constraintVertical_bias="0" />

            <ProgressBar
                android:id="@+id/pbLoader"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/HorizontalProgressBar"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMessage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>