<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include
        android:id="@+id/inToolbar"
        layout="@layout/include_toolbar"
        app:layout_constraintBottom_toTopOf="@id/clContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inToolbar"
        tools:context=".activity.RepoListActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            style="@style/TextInputLayout"
            android:layout_margin="@dimen/_16sdp"
            android:hint="@string/hint_search"
            app:layout_constraintBottom_toTopOf="@id/swipeRefresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:endIconMode="clear_text"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSearch"
                style="@style/TextInputEditText"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/llErrorContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSearch">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRepoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:context=".activity.RepoListActivity"
                tools:itemCount="6"
                tools:listitem="@layout/item_repo" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llErrorContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/pbLoader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swipeRefresh"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/img_no_connection" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvError"
                style="@style/tvErrorHeader"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.8"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mrgSmall"
                android:text="@string/info_something_went_wrong"
                app:layout_constraintBottom_toTopOf="@+id/tvErrorMsg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivError" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorMsg"
                style="@style/tvErrorFooter"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.8"
                android:layout_height="wrap_content"
                android:text="@string/info_an_alien"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvError" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRetry"
                style="@style/btnGreen"
                android:onClick="onClick"
                android:visibility="gone"
                android:text="@string/btn_retry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pbLoader"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:indeterminateOnly="true"
            android:indeterminateDuration="10"
            android:indeterminateBehavior="repeat"
            android:progressBackgroundTint="@color/colorDividerGreen"
            android:progressBackgroundTintMode="multiply"
            android:minHeight="24dip"
            android:maxHeight="24dip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>